--- a/src/style/_swatches.scss
+++ b/src/style/_swatches.scss
@@ -1,11 +1,16 @@
-.swatches {
-  width: 70%;
-  height: 100%;
-  float: left;
+.swatch {
+  height: 100px;
 }
 
-.swatch {
-  float: left;
-  height: 100vh;
-  width: 25%;
+@media #{$medium-and-up} {
+  .swatches {
+    width: calc(100% - 300px);
+    height: 100%;
+    float: left;
+  }
+  .swatch {
+    float: left;
+    height: 100vh;
+    width: 25%;
+  }
 }
