--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -11,92 +11,93 @@
 // 1. Colors
 // ==========================================================================
 
-$primary-color: #666;
-$primary-color-light: lighten($primary-color, 15%) !default;
-$primary-color-dark: darken($primary-color, 15%) !default;
+$primary-color: #3F51B5;
+$primary-color-light: lighten($primary-color, 15%);
+$primary-color-dark: darken($primary-color, 15%);
 
-$secondary-color: #666;
-$success-color: #666;
-$error-color: #666;
-$link-color: #666;
+$secondary-color: #F44336;
+$white-color: #FFF;
+$success-color: #4CAF50;
+$error-color: #F44336;
+$link-color: $secondary-color;
 
 // 2. Buttons
 // ==========================================================================
 
 // Shared styles
-$button-border: none !default;
-$button-background-focus: lighten($secondary-color, 4%) !default;
-$button-font-size: 1.3rem !default;
-$button-height: 36px !default;
-$button-padding: 0 2rem !default;
-$button-radius: 2px !default;
+$button-border: none ;
+$button-background-focus: lighten($secondary-color, 4%);
+$button-font-size: 1.3rem;
+$button-height: 36px;
+$button-padding: 0 2rem;
+$button-radius: 2px;
 
 // Disabled styles
-$button-disabled-background: #DFDFDF !default;
-$button-disabled-color: #9F9F9F !default;
+$button-disabled-background: #DFDFDF;
+$button-disabled-color: #9F9F9F;
 
 // Raised buttons
-$button-raised-background: $secondary-color !default;
-$button-raised-background-hover: lighten($button-raised-background, 5%) !default;
-$button-raised-color: #fff !default;
+$button-raised-background: $secondary-color;
+$button-raised-background-hover: lighten($button-raised-background, 5%);
+$button-raised-color: #fff;
 
 // Large buttons
-$button-large-icon-font-size: 1.6rem !default;
-$button-large-height: $button-height * 1.5 !default;
+$button-large-icon-font-size: 1.6rem;
+$button-large-height: $button-height * 1.5;
 
 // Flat buttons
-$button-flat-color: #343434 !default;
-$button-flat-disabled-color: lighten(#999, 10%) !default;
+$button-flat-color: #343434;
+$button-flat-disabled-color: lighten(#999, 10%);
 
 // Floating buttons
-$button-floating-background: $secondary-color !default;
-$button-floating-background-hover: $button-floating-background !default;
-$button-floating-color: #fff !default;
-$button-floating-size: 40px !default;
-$button-floating-large-size: 56px !default;
-$button-floating-radius: 50% !default;
+$button-floating-background: $secondary-color;
+$button-floating-background-hover: $button-floating-background;
+$button-floating-color: #fff;
+$button-floating-size: 40px;
+$button-floating-large-size: 56px;
+$button-floating-radius: 50%;
 
 // 3. Forms
 // ==========================================================================
 
 // Text Inputs + Textarea
-$input-height: 3rem !default;
+$input-height: 3rem;
 $input-border-color: $primary-color;
-$input-border: 1px solid $input-border-color !default;
-$input-background: #fff !default;
-$input-error-color: $error-color !default;
-$input-success-color: $success-color !default;
-$input-focus-color: $secondary-color !default;
-$input-font-size: 1rem !default;
-$input-margin: 0 0 20px 0 !default;
-$input-padding: 0 !default;
-$input-transition: all .3s !default;
-$label-font-size: .8rem !default;
-$input-disabled-color: rgba(0,0,0, .26) !default;
-$input-disabled-solid-color: #BDBDBD !default;
-$input-disabled-border: 1px dotted $input-disabled-color !default;
-$input-invalid-border: 1px solid $input-error-color !default;
-$placeholder-text-color: lighten($input-border-color, 20%) !default;
+$input-border: 1px solid $input-border-color;
+$input-background: #fff;
+$input-error-color: $error-color;
+$input-success-color: $success-color;
+$input-focus-color: $secondary-color;
+$input-font-size: 1rem;
+$input-margin: 0 0 20px 0;
+$input-padding: 0;
+$input-transition: all .3s;
+$label-font-size: .8rem;
+$input-disabled-color: rgba(0,0,0, .26);
+$input-disabled-solid-color: #BDBDBD;
+$input-disabled-border: 1px dotted $input-disabled-color;
+$input-invalid-border: 1px solid $input-error-color;
+$placeholder-text-color: lighten($input-border-color, 20%);
 
 // 12. Grid
 // ==========================================================================
 
-$num-cols: 12 !default;
-$gutter-width: 1.5rem !default;
+$num-cols: 12;
+$gutter-width: 1.5rem;
 
 // 11. Global
 // ==========================================================================
 
 // Media Query Ranges
-$small-screen-up: 601px !default;
-$medium-screen-up: 993px !default;
-$large-screen-up: 1201px !default;
-$small-screen: 600px !default;
-$medium-screen: 992px !default;
-$large-screen: 1200px !default;
+$small-screen-up: 601px;
+$medium-screen-up: 993px;
+$large-screen-up: 1201px;
+$small-screen: 600px;
+$medium-screen: 992px;
+$large-screen: 1200px;
 
-$medium-and-up: "only screen and (min-width : #{$small-screen-up})" !default;
-$large-and-up: "only screen and (min-width : #{$medium-screen-up})" !default;
-$small-and-down: "only screen and (max-width : #{$small-screen})" !default;
-$medium-and-down: "only screen and (max-width : #{$medium-screen})" !default;
-$medium-only: "only screen and (min-width : #{$small-screen-up}) and (max-width : #{$medium-screen})" !default;
+$medium-and-up: "only screen and (min-width : #{$small-screen-up})";
+$large-and-up: "only screen and (min-width : #{$medium-screen-up})";
+$small-and-down: "only screen and (max-width : #{$small-screen})";
+$medium-and-down: "only screen and (max-width : #{$medium-screen})";
+$medium-only: "only screen and (min-width : #{$small-screen-up}) and (max-width : #{$medium-screen})";
