--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,4 +1,5 @@
 @import "variables";
+@import "utilities";
 
 @import "normalize";
 @import "global";
@@ -8,3 +9,4 @@
 @import "swatches";
 @import "sidepanel";
 @import "palette";
+@import "tabs";
