Add icons and style swatch buttons

--- a/src/style/_input-fields.scss
+++ b/src/style/_input-fields.scss
@@ -36,7 +36,7 @@ input[type=search],
 textarea.materialize-textarea {
 
   // General Styles
-  background-color: transparent;
+  background-color: $input-background;
   border: none;
   border-bottom: $input-border;
   border-radius: 0;
