--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -64,7 +64,7 @@ $button-floating-radius: 50%;
 $input-height: 3rem;
 $input-border-color: $primary-color;
 $input-border: 1px solid $input-border-color;
-$input-background: #fff;
+$input-background: $white-color;
 $input-error-color: $error-color;
 $input-success-color: $success-color;
 $input-focus-color: $secondary-color;
