--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -5,7 +5,7 @@
 @import "global";
 @import "input-fields";
 @import "buttons";
-
+@import "typography";
 @import "swatches";
 @import "sidepanel";
 @import "palette";
