--- a/src/style/_swatches.scss
+++ b/src/style/_swatches.scss
@@ -6,12 +6,24 @@
 @media #{$medium-and-up} {
   .swatches {
     width: calc(100% - 300px);
-    height: 100%;
+    height: 100vh;
     float: left;
   }
+
   .swatch {
     float: left;
-    height: 100vh;
     width: 25%;
+  }
+
+  .swatch--whole {
+    height: 100%;
+  }
+
+  .swatch--half {
+    height: 50%;
+  }
+
+  .swatch--third {
+    height: 33.33%;
   }
 }
