Replace primary color with secondary color in sidebar

--- a/src/style/utilities/_color.scss
+++ b/src/style/utilities/_color.scss
@@ -2,6 +2,10 @@
   background-color: $primary-color!important;
 }
 
+.bg-secondary {
+  background-color: $secondary-color!important;
+}
+
 .color-error {
   color: $error-color!important;
 }
