--- a/src/style/_tabs.scss
+++ b/src/style/_tabs.scss
@@ -6,6 +6,7 @@
 
 .tab {
   flex: 1 0 auto;
+  cursor: pointer;
   line-height: 36px;
   display: inline-block;
   border: none;
@@ -14,6 +15,10 @@
 
   &.active {
     background-color: $white-color;
-    color: $primary-color;
+    color: $secondary-color;
+  }
+
+  &:focus {
+    outline: none;
   }
 }
