Style swatch buttons to inherit color from swatch

--- a/src/style/_swatches.scss
+++ b/src/style/_swatches.scss
@@ -1,6 +1,17 @@
 .swatch {
   height: 100px;
   padding: 1rem;
+  cursor: pointer;
+
+  button {
+    display: none;
+  }
+
+  &:hover {
+    button {
+      display: inline-block;
+    }
+  }
 }
 
 @media #{$medium-and-up} {
