--- a/src/style/_buttons.scss
+++ b/src/style/_buttons.scss
@@ -139,110 +139,11 @@ button.btn-floating {
   border: $button-border;
 }
 
-// Fixed Action Button
-.fixed-action-btn {
-  &.active {
-    ul {
-      visibility: visible;
-    }
-  }
+.btn-inherit {
+  color: inherit!important;
 
-  &.horizontal {
-    padding: 0 0 0 15px;
-
-    ul {
-      text-align: right;
-      right: 64px;
-      top: 50%;
-      transform: translateY(-50%);
-      height: 100%;
-      left: auto;
-      width: 500px; /*width 100% only goes to width of button container */
-
-      li {
-        display: inline-block;
-        margin: 15px 15px 0 0;
-      }
-    }
-  }
-
-  &.toolbar {
-    &.active {
-      & > a i {
-        opacity: 0;
-      }
-    }
-
-    padding: 0;
-    height: $button-floating-large-size;
-
-    ul {
-      display: flex;
-      top: 0;
-      bottom: 0;
-
-      li {
-        flex: 1;
-        display: inline-block;
-        margin: 0;
-        height: 100%;
-        transition: none;
-
-        a {
-          display: block;
-          overflow: hidden;
-          position: relative;
-          width: 100%;
-          height: 100%;
-          background-color: transparent;
-          box-shadow: none;
-          color: #fff;
-          line-height: $button-floating-large-size;
-          z-index: 1;
-
-          i {
-            line-height: inherit;
-          }
-        }
-      }
-    }
-  }
-
-  position: fixed;
-  right: 23px;
-  bottom: 23px;
-  padding-top: 15px;
-  margin-bottom: 0;
-  z-index: 998;
-
-  ul {
-    left: 0;
-    right: 0;
-    text-align: center;
-    position: absolute;
-    bottom: 64px;
-    margin: 0;
-    visibility: hidden;
-
-    li {
-      margin-bottom: 15px;
-    }
-
-    a.btn-floating {
-      opacity: 0;
-    }
-  }
-
-  .fab-backdrop {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    width: $button-floating-size;
-    height: $button-floating-size;
-    background-color: $button-floating-background;
-    border-radius: $button-floating-radius;
-    transform: scale(0);
+  i {
+    color: inherit!important;
   }
 }
 
