--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -15,7 +15,7 @@ $primary-color: #3F51B5;
 $primary-color-light: lighten($primary-color, 15%);
 $primary-color-dark: darken($primary-color, 15%);
 
-$secondary-color: #F44336;
+$secondary-color: #424242;
 $white-color: #FFF;
 $success-color: #4CAF50;
 $error-color: #F44336;
@@ -62,12 +62,12 @@ $button-floating-radius: 50%;
 
 // Text Inputs + Textarea
 $input-height: 3rem;
-$input-border-color: $primary-color;
+$input-border-color: $secondary-color;
 $input-border: 1px solid $input-border-color;
 $input-background: $white-color;
 $input-error-color: $error-color;
 $input-success-color: $success-color;
-$input-focus-color: $secondary-color;
+$input-focus-color: $primary-color;
 $input-font-size: 1rem;
 $input-margin: 0 0 20px 0;
 $input-padding: 0;
