--- a/src/style/_input-fields.scss
+++ b/src/style/_input-fields.scss
@@ -113,6 +113,7 @@ textarea.materialize-textarea {
   // Form Message Shared Styles
   & + label:after {
     display: block;
+    min-width: 100px;
     content: "";
     position: absolute;
     top: 60px;
