--- a/src/style/_sidepanel.scss
+++ b/src/style/_sidepanel.scss
@@ -10,8 +10,9 @@
   padding: 1rem;
 }
 
-@media #{$medium-and-up} {
+@media #{$large-and-up} {
   .sidepanel {
+    position: fixed;
     width: 300px;
     height: 100vh;
     overflow-y: auto;
