--- a/src/style/_sidepanel.scss
+++ b/src/style/_sidepanel.scss
@@ -13,6 +13,7 @@
 @media #{$large-and-up} {
   .sidepanel {
     position: fixed;
+    z-indeX: 2;
     width: 300px;
     height: 100vh;
     overflow-y: auto;
