Add z-index to hoverable

--- a/src/style/_global.scss
+++ b/src/style/_global.scss
@@ -82,5 +82,7 @@ a {
 
 .hoverable:hover {
   transition: box-shadow .25s;
+  position: relative;
   box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  z-index: 1;
 }
