--- a/src/style/_modal.scss
+++ b/src/style/_modal.scss
@@ -1,12 +1,8 @@
 .modal {
-  position: fixed;
-  lefT: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
+  @extend .fullscreen;
   background: rgba(33,33,33,0.48);
-  z-index: 10;
 }
+
 .modal__card {
   margin: 2rem auto;
   max-width: 700px;
