[Style] Use spectre and remove custom SCSS

--- a/src/style/_fullscreen-message.scss
+++ b/src/style/_fullscreen-message.scss
@@ -1,5 +1,10 @@
 .fullscreen-message {
-  @extend .fullscreen;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 10;
   background-color: $white-color;
 }
 
