[Style] Refactor SideBar

--- a/src/style/_palette.scss
+++ b/src/style/_palette.scss
@@ -1,11 +1,5 @@
-.palette {
-  display: inline-block;
-  margin-right: .5rem;
-}
-
 .palette__color {
-  width: 36px;
-  height: 36px;
+  height: 4rem;
   border: none;
   cursor: pointer;
 }
